# shadow-remix

./: .gitignore  LICENSE  README.md  create_release.py  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: baidu_pcs.rs  compress.rs  crypto.rs  fs.rs  http.rs  mod.rs  os.rs  process.rs  secrets.rs
src-tauri/src/api/utils/: command.rs  event.rs  mod.rs  parse.rs
src/pages/: _app.tsx  index.tsx
src/shadow/: contracts.ts
src/shadow/components/: general.tsx  home.tsx
src/shadow/components/config-page/: baidu-login.tsx  config-page.tsx
src/shadow/components/download-page/: download-page.tsx
src/shadow/components/search-page/: card.tsx  search-page.tsx
src/shadow/core/: apis.ts  baidu-pcs.ts  compress.ts  config.ts  download.ts  invoke.ts  listener.ts  logger.ts  notify.ts  parse.ts  path.ts  process.ts  shell.ts  update.ts
src/shadow/handlers/: xxx.ts
src/shadow/singletons/: configs.ts  index.ts  interfaces.ts  paths.ts  singletons.ts
