[package]
name = "shadow"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "devtools"] }
reqwest = { version = "0.11.14", features = ["blocking"] }
thiserror = "1.0.38"
shared_child = "1.0.0"
hex = "0.4.3"
rust-crypto = "0.2.36"
md-5 = "0.10.5"
aes = "0.8.2"
base64 = "0.21.0"
flate2 = "1.0.25"
block-modes = "0.9.1"
block-padding = { version = "0.3.3", features = ["std"] }
cbc = "0.1.2"
aes-gcm = "0.10.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
